# messagescope_pi

./: CMakeLists.txt  MessageScope.fbp  README
cmake/: PluginConfigure.cmake
po/: POTFILES.in  messagescope_pi.pot
src/: MessageScopeDialog.cpp  MessageScopeDialog.h  MessageScopeUI.h  messagescope_pi.cpp  messagescope_pi.h
